validation/sylva-validation/stack-validation/image/k8s/ns.yaml
# Copyright (C) 2023 Intel Corporation
# SPDX-License-Identifier: Apache-2.0
#
---
apiVersion: v1
kind: Namespace
metadata:
  name: stack-validation
  labels:
    name: stack-validation
